[package]
name = "linear_regression_model"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.16.0", features = ["wgpu", "train"] }
burn-ndarray = "0.16.0"
rand = "0.9.0"
rgb = "0.8.50"
textplots = "0.8.6"
ndarray = "0.15"
ndarray-rand = "0.14"
ndarray-linalg = "0.16"
ndarray-stats = "0.5"
rand_distr = "0.5.1"
